--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: git-gateway
+  name: github
   repo: alexrichardsweb/kssouls-nuxt
   branch: master # Branch to update (optional; defaults to master)
 publish_mode: editorial_workflow
