--- a/package.json
+++ b/package.json
@@ -12,20 +12,28 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/style-resources": "^1.2.1",
+    "babel-eslint": "^10.1.0",
     "core-js": "^3.19.3",
+    "netlify-cms-proxy-server": "^1.3.23",
     "nuxt": "^2.15.8",
+    "nuxt-webfontloader": "^1.1.0",
+    "sass": "^1.49.7",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.3",
+    "@babel/eslint-parser": "^7.17.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0"
+    "eslint-plugin-vue": "^8.2.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3"
   }
 }
