--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,7 +16,7 @@ collections:
     fields:
       - { label: 'Site Settings Name', name: 'site_settings_name', widget: 'string', default: 'Site Settings' }
       - { label: 'Site Name', name: 'site_name', widget: 'string' }
-      - { label: 'Logo', name: 'logo', widget: 'image' }
+      - { label: 'Logo', name: 'logo', widget: 'image', required: false }
       - label: 'Social'
         name: 'social'
         widget: list
