--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,6 +5,7 @@ backend:
   local_backend: true
 #publish_mode: editorial_workflow
 media_folder: "static/images/uploads" # Media files will be stored in the repo under images/uploads
+public_folder: "images/uploads"
 collections:
   - name: 'Settings'
     label: 'Site Settings'
