--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
+    "@vime/core": "^5.3.1",
+    "@vime/vue": "^5.3.1",
+    "@vime/vue-next": "^5.3.1",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.19.3",
     "netlify-cms-proxy-server": "^1.3.23",
+    "netlify-cms-widget-richtext": "^0.1.5",
     "nuxt": "^2.15.8",
     "nuxt-webfontloader": "^1.1.0",
     "sass": "^1.49.7",
